   a sensible implementation so that people extending from it
   are no longer required to write a function that returns beanshell code
   as long as they override the invoke(View) method properly.

   Made getLabel() non-final, so that people can override it and make
   more interesting EditActions. If args is set, getLabel() uses them
   for the label.
   (ezust)
   }}}

-  Removed abstract EditAction.getCode() method. It really only applies
   to BeanShellAction, where it is used. We may want to make other
   EditActions which are written in Java rather than BeanShell.

-  GUIUtilities.addSizeSaver(Frame parent, String name) changed to
   GUIUtilities.addSizeSaver(Window window, Container parent, String name)
   and refactored to use saveGeometry(). Saves/restores
   sizes relative to a parent container. if parent=null, behaves
   as before. (ezust)

- jEdit.getPlugin(className, bool) now will search for and
  load plugins that were not yet loaded, given a className to search
  for. (ezust)

- added PluginJAR.findPlugin() which is used by the above method (ezust).

- added PluginJAR.load(), formerly a private method moved
  from the ManagePanel class. Also moved transitiveClosure() into
  the PluginJAR class. General refactoring to make the
  plugin management code more centrally located.  (ezust)

- added SearchMatcher.isMatchingEOL(); indicates whether the matched
  region ends at an EOL character. Part of bug fix for SF Bug #1541009.
  (Marcelo Vanzin)

- added new class org.gjt.sp.jedit.io.VFSFileFilter; an interface that
  defines a filter used by the VFS browser. (Marcelo Vanzin)

- added VFSBrowser.addVFSFileFilter() and VFSBrowser.getVFSFileFilter().
  Deprecated VFSBrowser.getFilenameFilter(). (Marcelo Vanzin)

- added VFS._listDirectory(Object,String,VFSFileFilter,boolean,Component,boolean,boolean)
  (Marcelo Vanzin)

- moved MiscUtilities.globToRE() to StandardUtilities. (Marcelo Vanzin)
